--- a/src/Resources/view/professional.phtml
+++ b/src/Resources/view/professional.phtml
@@ -40,7 +40,7 @@ use NimblePHP\Table\Table;
                 <div class="col-12 col-md-auto d-flex justify-content-end">
                     <input class="ajax-form form-control me-2 form-control-sm w-100"
                            type="search" name="search" value="<?= $searchValue ?>"
-                           placeholder="<?= Translation::getInstance()->translate('module.table.search') ?>" aria-label="search"
+                           placeholder="<?= Translation::getInstance()->translate('module.table.search') ?>" aria-label="<?= Translation::getInstance()->translate('module.table.search') ?>"
                            style="border-radius: 4px; border: 1px solid #e2e8f0; padding: 8px 12px; font-size: 14px;"/>
                 </div>
             <?php endif ?>
@@ -105,7 +105,7 @@ use NimblePHP\Table\Table;
                                                 <div class="table-cell-edit-error text-danger small mt-1"><?= htmlspecialchars($editError, ENT_QUOTES) ?></div>
                                             <?php endif ?>
                                         </div>
-                                        <button type="button" class="table-cell-edit-trigger btn btn-link btn-sm text-muted p-0" title="Edytuj" aria-label="Edytuj">
+                                        <button type="button" class="table-cell-edit-trigger btn btn-link btn-sm text-muted p-0" title="<?= Translation::getInstance()->translate('module.table.edit') ?>" aria-label="<?= Translation::getInstance()->translate('module.table.edit') ?>">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 16 16" fill="currentColor">
                                                 <path d="M12.854.146a.5.5 0 0 1 .707 0l2.293 2.293a.5.5 0 0 1 0 .707l-9.5 9.5L4 13l.354-2.354 9.5-9.5zM3.5 13.5l2.147-.358L4.358 11.853 4 14l2.147-.358L3.5 13.5z"/>
                                             </svg>
